--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,9 +8,9 @@
 			"type": "lldb",
 			"request": "launch",
 			"name": "Debug",
-			"program": "/home/db/so_long_dev2/so_long",
+			"program": "/Users/dbenkhar/so_long_dev2/so_long",
 			"args": ["maps/map1.ber"],
-			"cwd": "/home/db/so_long_dev2/"
+			"cwd": "/Users/dbenkhar/so_long_dev2/"
 		}
 	]
 }
